Sort header legibility issues

--- a/src/style.less
+++ b/src/style.less
@@ -6,7 +6,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  min-height: 300px;
+  min-height: 350px;
   padding: 1.8rem 0.8rem 1.6rem;
   background-repeat: no-repeat;
   background-position: center;
@@ -14,6 +14,7 @@ header {
 
   &.landing-bg {
     background-image: url('./images/landing-bg-ALT.jpg');
+    opacity: 0.9;
   }
 
   &.the-day-bg {
@@ -22,6 +23,12 @@ header {
 
   &.travel-accommodation-bg {
     background-image: url('./images/travel-accommodation-bg.jpg');
+
+    h1.smaller {
+      font-size: 1.55rem;
+      letter-spacing: 0.9rem;
+      padding-left: 0.3rem;
+    }
   }
 
   h1 {
@@ -37,6 +44,8 @@ header {
 
     h2 {
       font-size: 1.6rem;
+      color: #ef8f0c;
+      .legibility-shadow;
     }
   }
 }
